# RustToLearn

./: .gitignore  README.md
Chapter1/: hello_world.rs
Chapter10/declare_generic_type/: Cargo.toml
Chapter10/declare_generic_type/src/: main.rs
Chapter10/define_trait/src/: main.rs
Chapter10/lifetime/src/: main.rs
Chapter11/advanced_test/: Cargo.toml
Chapter11/advanced_test/src/: lib.rs  main.rs  test_module.rs
Chapter11/advanced_test/tests/: test_module_test.rs
Chapter11/base_test/src/: lib.rs  main.rs
Chapter12/env_var/: Cargo.toml
Chapter13/closure_and_function_param/: Cargo.toml
Chapter13/collection_iter/: Cargo.toml
Chapter15/test_box/: Cargo.toml
Chapter15/test_deref_and_drop/: Cargo.toml
Chapter15/test_ref_cell/: Cargo.toml
Chapter15/test_ref_cycle/: Cargo.toml
Chapter16/test_message_passing/: Cargo.toml
Chapter16/test_shared_state/: Cargo.toml
Chapter16/test_sync_and_send/: Cargo.toml
Chapter17/test_dyn_trait/: Cargo.toml
Chapter18/pattern_use_case/: Cargo.toml
Chapter19/advanced_function_and_closure/: Cargo.toml
Chapter19/test_macro/: Cargo.toml
Chapter6/enum_init/: Cargo.toml
Chapter7/project_management/: Cargo.toml
Chapter9/panic/: Cargo.toml
Chapter9/result/: hello.txt
Chatper14/extend_cargo/: Cargo.toml
Chatper14/extend_cargo/src/: module_bar.rs
Chatper14/extend_cargo/sub_package_1/: Cargo.toml
Chatper14/extend_cargo/sub_package_1/src/: main.rs
Chatper14/extend_cargo/sub_package_2/: Cargo.toml
Chatper14/extend_cargo/sub_package_3/src/: lib.rs
Exer2/minigrep/: test3.txt  test4.txt
(+61 files in other folders)
