workspace = { members = ["sub_package_1", "sub_package_2", "sub_package_3"] }
[package]
name = "extend_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3

[dependencies]
